# hdr-launcher-react

./: .eslintrc.js  .gitignore  README.md  build.py  package-lock.json  package.json  tsconfig.json
.erb/configs/: webpack.config.base.ts  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.github/workflows/: .publish.yml.kate-swp  nightly.yml  pr_comment.yml  publish.yml  test.yml
electron/: bridge.ts  config.ts  main.ts  message_handler.ts  request_handler.ts
public/: index.html
release/app/: package-lock.json  package.json
src/: App.tsx  backend.tsx  index.css  index.tsx  messages.ts  progress.ts  responses.ts  skyline.d.ts  skyline.js
src/components/: app.tsx  changelog.tsx  expand_sidebar.tsx  focus_button.tsx  header.tsx  latest_changes.tsx  loading.tsx  log_list.tsx  log_window.tsx  logo_right.tsx  main_menu.tsx  menu.tsx  options.tsx  popup.tsx  progress_bar.tsx  sidebar.tsx  sliding_background.tsx  twitter_embed.tsx  twitter_singleton.tsx  update_button.tsx
src/components/buttons/: focus_button.tsx  focus_checkbox.tsx  nightly_beta_button.tsx  update_button.tsx
src/components/menus/: abstract_menu.tsx  checking_installed.tsx  main_menu.tsx  not_installed_menu.tsx  options_menu.tsx  tools_menu.tsx
src/components/stage_config/: stage_config_menu.tsx  stage_entry.tsx
src/main/: config.ts  main.ts  preload.ts  request_handler.ts
src/menus/: index.ts  log_window.tsx  main_menu.tsx
src/operations/: backend.ts  background_music.ts  focus_singleton.ts  focus_singleton.tsx  github_utils.ts  install.ts  launcher_config.ts  log_singleton.ts  popup_data.ts  stage_config.ts  update.ts  verify.ts
src/renderer/: app.tsx  constants.ts  index.ejs  index.tsx  preload.d.ts
src/renderer/components/: app.tsx  changelog.tsx  error_page.tsx  expand_sidebar.tsx  fullscreen_div.tsx  header.tsx  info_box.tsx  latest_changes.tsx  loading.tsx  log_list.tsx  log_window.tsx  logo_right.tsx  main_menu.tsx  menu.tsx  popup.tsx  progress_bar.tsx  sidebar.tsx  sliding_background.tsx  twitter_embed.tsx
src/renderer/components/buttons/: dev_tools_buttons.tsx  focus_button.tsx  focus_checkbox.tsx  focus_combo.tsx  navigate_button.tsx  nightly_beta_button.tsx  prerelease_beta_button.tsx  scroll_focus_button.tsx  update_button.tsx
src/renderer/components/common/: fullscreen_div.tsx
src/renderer/components/logging/: log_list.tsx  log_popout.tsx  log_window.tsx
src/renderer/components/menus/: abstract_menu.tsx  checking_installed.tsx  main_menu.tsx  not_installed_menu.tsx  options_menu.tsx  pr_installed_menu.tsx  pull_request_menu.tsx  tools_menu.tsx
src/renderer/components/stage_config/: stage_config_menu.tsx  stage_entry.tsx  stage_preview.tsx
src/renderer/operations/: backend.ts  background_music.ts  focus_singleton.ts  github_utils.ts  install.ts  launcher_config.ts  log_listener.ts  log_singleton.ts  popup_data.ts  stage_config.ts  stage_data.ts  stage_info.ts  update.ts  verify.ts
src/renderer/routes/: loading.tsx  pull_request_menu.tsx
src/renderer/routes/menus/: abstract_menu.tsx  checking_installed.tsx  info_box.tsx  (+8 more)
src/renderer/styles/: index.css  infobox.css  opening.css  progress.css  sidebar.css
src/styles/: index.css  opening.css  progress.css  sidebar.css
switch/: Cargo.toml  build.rs
switch/src/: lib.rs  message.rs  response.rs  stage_config.rs  unzipper.rs
webpack/: rules.webpack.js
(+7 files in other folders)
