[package]
name = "hdr-launcher-react"
version = "0.1.0"
authors = ["techyCoder81"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[build-dependencies]
prettify-js = "0.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
