[package]
name = "hdr-launcher-react"
version = "0.1.4"
authors = ["techyCoder81"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[features]
updater = []

[dependencies]
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline-web = { version = "0.1.0", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
md5 = "0.7.0"
walkdir = "2"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
nx-request-handler = { git = "https://github.com/techyCoder81/nx-request-handler" }
semver = "1.0.14"
minreq = { version = "2", features = ["https-native", "json-using-serde"] }

[build-dependencies]
prettify-js = "0.1.0"

[patch.crates-io]
nnsdk = { git = "https://github.com/Raytwo/nnsdk-rs", branch="account_fs" }
native-tls = { git = "https://github.com/GradualSyrup/rust-native-tls", branch="switch" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
