[package]
name = "hdr-launcher-react"
version = "0.2.17"
authors = ["techyCoder81"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[features]
updater = []
no-npm = []

[dependencies]
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline-web = { git = "https://github.com/techyCoder81/skyline-web", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
md5 = "0.7.0"
walkdir = "2"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
nx-request-handler = { git = "https://github.com/techyCoder81/nx-request-handler" }
semver = "1.0.14"
minreq = { version = "2", features = ["https-native", "json-using-serde"] }
include_dir = "0.7.3"
smashnet = "0.2"

[build-dependencies]
prettify-js = "0.1.0"
npm_rs = "0.2.1"
fs_extra = "1.2.0"

[patch.crates-io]
skyline-web = { git = "https://github.com/techyCoder81/skyline-web" }
nnsdk = { git = "https://github.com/Raytwo/nnsdk-rs", branch="account_fs" }
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", branch="switch" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
